# innowise_laboratory

./: requirements.txt
lecture_1/: main.py  pyproject.toml
lecture_2/: mini-profile.py
lecture_3/: student_grade_analyzer.py
lecture_4/: check_database.py  create_db.py  queries.sql  school.db
lecture_6/: Dockerfile
