[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "innowise_laboratory"
version = "0.1.0"
description = "A mini project"
authors = [
    {name = "Milana", email = "dittonewstudy@gmail.com"}
]
dependencies = [
    "colorama>=0.4.6"
]

[project.scripts]
innowise-lab = "main:main"